# Esercitazione_0_2026

esercitazione1/: CMakeLists.txt  ese1  ese1.cpp  ese1.h  ese1_functions.cpp
esercitazione2/: CMakeLists.txt  ese2.cpp  ese2.h  ese2_func.cpp
